--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
@@ -55,7 +55,10 @@
 
     <div class="form-group">
       <label for="nazioneSede">Nazione della Sede:</label>
-      <input type="text" id="nazioneSede" name="nazioneSede" [(ngModel)]="fornitore.nazioneSede" required>
+      <select id="nazioneSede" name="nazioneSede" [(ngModel)]="selectedCountry" required>
+        <option value="" disabled selected>Seleziona una nazione</option>
+        <option *ngFor="let nation of nations" [ngValue]="nation">{{ nation.name }}</option>
+      </select>
     </div>
 
     <div class="form-group">
