--- a/src/app/Fornitore/fornitori/fornitori-component.component.html
+++ b/src/app/Fornitore/fornitori/fornitori-component.component.html
@@ -1,47 +1,8 @@
 <!-- Il tuo componente Angular -->
 <div *ngIf="fornitori" class="elenco-fornitori">
   <h2>Elenco Fornitori</h2>
-  
-  <!-- Pulsante per mostrare il form di ricerca -->
-  <button class="btn btn-primary" (click)="mostraFormRicerca()">
-    <i class="pi pi-search"></i> Cerca Fornitori
-  </button>
-  
-  <!-- Form di ricerca (inizialmente nascosto) -->
-  <form *ngIf="mostraRicerca" (submit)="cercaFornitori()">
-    <div class="form-group">
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" [(ngModel)]="filtroRicerca.nome" name="nome" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="sedeLegale">Sede Legale</label>
-      <input type="text" id="sedeLegale" [(ngModel)]="filtroRicerca.sedeLegale" name="sedeLegale" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="nazioneSede">Nazione Sede</label>
-      <input type="text" id="nazioneSede" [(ngModel)]="filtroRicerca.nazioneSede" name="nazioneSede" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="partitaIVA">Partita IVA</label>
-      <input type="text" id="partitaIVA" [(ngModel)]="filtroRicerca.partitaIVA" name="partitaIVA" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" id="email" [(ngModel)]="filtroRicerca.email" name="email" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="numeroTelefono">Numero di Telefono</label>
-      <input type="text" id="numeroTelefono" [(ngModel)]="filtroRicerca.numeroTelefono" name="numeroTelefono" class="form-control">
-    </div>
-    <!-- Aggiungi altri campi di ricerca qui -->
-
-    <button type="submit" class="btn btn-primary">Cerca</button>
-  </form>
-  
   <div class="table-responsive">
-    <!-- Tabella dei fornitori -->
     <table class="table">
-      <!-- Intestazioni della tabella -->
       <thead>
         <tr>
           <th>Nome</th>
@@ -54,35 +15,37 @@
         </tr>
       </thead>
       <tbody>
-        <!-- Ciclo sui fornitori e visualizza i dati -->
-        <tr class="fornitore-item" *ngFor="let fornitore of fornitori">
-          <td>{{ fornitore.nome }}</td>
-          <td>{{ fornitore.sedeLegale }}</td>
-          <td>{{ fornitore.nazioneSede }}</td>
-          <td>{{ fornitore.partitaIVA }}</td>
-          <td>{{ fornitore.email }}</td>
-          <td>{{ fornitore.numeroTelefono }}</td>
-          <td>
-            <!-- Pulsanti Modifica ed Elimina -->
-            <button class="btn btn-primary" (click)="modificaFornitore(fornitore)">
-              <i class="pi pi-file-edit"></i> Modifica
-            </button>
-            <button class="btn btn-danger" (click)="eliminaFornitore(fornitore)">
-              <i class="pi pi-trash"></i> Elimina
-            </button>
-          </td>
-        </tr>
-        <tr *ngIf="modificaAperta && fornitoreInModifica">
-          <td colspan="7">
-            <!-- Modulo di modifica del fornitore -->
-            <app-modifica-fornitore
-              *ngIf="fornitoreInModifica"
-              [fornitore]="fornitoreInModifica"
-              (modificaCompletata)="gestisciModificaCompletata()">
-              [annullaModifica]="annullaModifica">
-            </app-modifica-fornitore>
-          </td>
-        </tr>
+        <ng-container *ngFor="let fornitore of fornitori">
+          <tr class="fornitore-item">
+            <!-- Utilizzo di ngIf per mostrare i dati del fornitore o il modulo di modifica -->
+            <td>{{ fornitore.nome }}</td>
+            <td>{{ fornitore.sedeLegale }}</td>
+            <td>{{ fornitore.nazioneSede }}</td>
+            <td>{{ fornitore.partitaIVA }}</td>
+            <td>{{ fornitore.email }}</td>
+            <td>{{ fornitore.numeroTelefono }}</td>
+            <td>
+              <!-- Aggiungi il pulsante Modifica -->
+              <button class="btn btn-primary" (click)="modificaFornitore(fornitore)">
+                <i class="pi pi-file-edit"></i> <!-- Icona "Modifica" -->
+              </button>
+              <button class="btn btn-danger" (click)="eliminaFornitore(fornitore)">
+                <i class="pi pi-trash"></i> 
+              </button>
+            </td>
+          </tr>
+          <tr *ngIf="modificaAperta&&fornitoreInModifica && modificaAperta&&fornitoreInModifica.id === fornitore.id">
+            <td colspan="7">
+              <!-- Modulo di modifica del fornitore -->
+              <app-modifica-fornitore
+                *ngIf="fornitoreInModifica"
+                [fornitore]="fornitoreInModifica"
+                (modificaCompletata)="gestisciModificaCompletata()">
+                [annullaModifica]="annullaModifica">
+              </app-modifica-fornitore>
+            </td>
+          </tr>
+        </ng-container>
       </tbody>
     </table>
   </div>
