--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -62,6 +62,12 @@
             <span>Elenco Clienti</span>
           </a>
         </li>
+        <li>
+          <a routerLink="/aggiungi-cliente" routerLinkActive="active">
+            <i class="pi pi-fw pi-list"></i>
+            <span>Aggiungi Cliente</span>
+          </a>
+        </li>
       </ul>
     </li>
     <li>
